--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rtc",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "engines": {
     "node": "18.x"
